--- a/Homework1/website.html
+++ b/Homework1/website.html
@@ -4,8 +4,8 @@
 
 <h2>HTML Forms</h2>
 
-<form action="http://127.0.0.1:5000/api/v1/resources/books">
-  <label for="id">id:</label><br>
+<form action="http://127.0.0.1:5000/api/v1/resources/number">
+  <label for="id">(0-731) id:</label><br>
   <input type="text" id="id" name="id"><br>
   <input type="submit" value="Submit">
 </form> 
